--- a/Main.css
+++ b/Main.css
@@ -2,54 +2,70 @@
 
 *{
 box-sizing: border-box;
-magin:0;
-pdding:0;
-background-color:#ffffff;
+
+
 }
-li, a, button{
+li,button{
 	font-family: 'Hind Siliguri', sans-serif;
-	font-weight: 500;
-	font-size:17px;
-	color:#fd8a69;
 	text-decoration: none;
 }
 header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 30px 10%;
+	padding: 30px 0px 10px 20px;
 }
 .nav__links{
+	display: flex;
+	justify-content: ;
+	align-items: center;
 	list-style: none;
+	font-size:17px;
+	color:#fd8a69;
 }
 
 .nav__links li{
 	display: inline;
-	padding: 0px 20px;
+	margin-left: 50px;
+
 }
 .nav__links li a{
+	text-decoration: none;
+		color:#fd8a69;
+		white-space: nowrap;
+		padding:9px 30px;
+		border-radius: 50px;
 	transition: all 0.3s ease 0s
 }
 .nav__links li a:hover{
-	color:#fd8a69;
+	color:white;
+	background-color:  rgba(255, 0, 0, 0.5);
 }
-.navbar-brand{
-	font-size:40px;
+a.navbar-brand{
+	margin-left: 200px;
+	font-size:30px;
 	color:#fd8a69;
 	cursor: pointer;
-	margin-right: auto;
+	margin-right: 100px;
+}
+a.navbar-brand:hover{
+	color:#fd8a69;
 }
 button {
-	padding: 9px 25px;
+	padding: 10px 25px ;
 	background-color: white;
 	border: none;
 	border-radius: 50px;
 	cursor: pointer;
+	color:#fd8a69;
 	transition: all 0.3s ease 0s;
+}
+.cta{
+	color:#fd8a69;
+	margin-left: 50px;
 }
 button:hover {
 	background-color:  rgba(255, 0, 0, 0.5);
+	color:white;
 }
+
 
 .carousel-indicators li {
 	border-color: #f4511e;
@@ -58,6 +74,7 @@ button:hover {
 .carousel-indicators li.active {
 	background-color: #f4511e;
 }
+
 
 .item h4 {
 	font-size: 19px;
@@ -74,4 +91,52 @@ button:hover {
 	border-radius: 0;
 	margin-bottom:0;
 	font-size:12px;
+}
+#login {
+	width:300px;
+	height:400px;
+	border:1px solid #f4511e;
+	margin-left: 300px;
+	float:left;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 30px;
+
+}
+#login a{
+		text-decoration: none;
+		border:1px solid;
+		padding:10px;
+		color:#f4511e;
+}
+#login a:hover{
+	background-color: #f4511e;
+	color:white;
+}
+#myCarousel{
+	width:500px;
+	height:300px;
+	float:left;
+	border:1px solid #f4511e;
+	justify-content: center;
+	align-items: center;
+	display: inline;
+}
+#news{
+	font-size: 30px;
+	width:500px;
+	height:100px;
+	display: inline;
+	justify-content: center;
+	align-items: center;
+}
+#top{
+height:1000px;
+}
+#footer{
+	height: 200px;
+width:100%;
+		background-color: beige;
+		text-align: center;
 }
