단어 검색화면에서 mydir 이동 기능 추가

--- a/html/searchpage.ejs
+++ b/html/searchpage.ejs
@@ -27,6 +27,15 @@
       <button type="submit" value=OK>OK</button><br>
       <br>
     </form>
+    <form class="login-form", action="/logout", method="get">
+      <button type="submit" value=OK>OK</button>
+    </form>
+      <button onclick="movepage()">Move</button>
+    <script>
+      function movepage(){
+        location.href = "/mydir";
+      }
+    </script>
     <br>
     <form>
     <% if(locals.data){%>
