--- a/html/mydir.ejs
+++ b/html/mydir.ejs
@@ -22,6 +22,12 @@
        form.submit();
       }
   </script>
+  <button onclick="movepage()">검색으로</button>
+    <script>
+      function movepage(){
+        location.href = "/searchpage";
+      }
+    </script>
     <form>
     <% if(locals.data){%>
       <table border=1px solid black>
