--- a/signlanguage_0618/html/mydir.ejs
+++ b/signlanguage_0618/html/mydir.ejs
@@ -13,6 +13,20 @@
     </title>
   </head>
   <body>
+  <!----타이틀 ----------------------------------------------------------->
+   <section class="main-tabs">
+  <h1>수어 학습 사이트</h1>
+  <h3>나만의 단어장으로 원하는 수어들을 학습해보세요!</h3>
+         <!-------------------------검색으로 돌아가기------------------------->
+     <div class="menu-tabs-container">
+    <button class="menu-tabs" onclick="movepage()">검색으로 돌아가기</button>
+    <script>
+      function movepage(){
+        location.href = "/searchpage";
+      }
+    </script>
+    </div>
+  </section>
     <script>
       function postid(clicked_id){
        var form = document.createElement("form");
@@ -28,12 +42,6 @@
        form.submit();
       }
   </script>
-  <button onclick="movepage()">검색으로</button>
-    <script>
-      function movepage(){
-        location.href = "/searchpage";
-      }
-    </script>
     <form>
     <% if(locals.data){%>
       <table border=1px solid black>
@@ -57,11 +65,11 @@
 
     </form>
 <div class="fixed">
- <p >최근 검색한 단어</p>
+ <p >최근 <br>검색한 단어</p>
       <%if(locals.data2)%>
-      <p>1 = <%=locals.data2[0]%></p>
-      <p>2 = <%=locals.data2[1]%></p>
-      <p>3 = <%=locals.data2[2]%></p>
+      <p><%=locals.data2[0]%></p>
+      <p><%=locals.data2[1]%></p>
+      <p><%=locals.data2[2]%></p>
       <%if(locals.text1){%>
   <script>
     alert(locals.text1)
