--- a/signlanguage_0618/html/mydir.ejs
+++ b/signlanguage_0618/html/mydir.ejs
@@ -58,7 +58,7 @@
           </tr>
           <%}%>
         <%}%>
-      </table>
+      </table><br><br>
       <% if(locals.text){%>
         <p><%=locals.text%></p>
       <%}%>
