--- a/signlanguage_0618/html/main.ejs
+++ b/signlanguage_0618/html/main.ejs
@@ -66,9 +66,9 @@
  <div class="fixed">
  <p >최근 검색한 단어</p>
       <%if(locals.data2)%>
-      <p>1 = <%=locals.data2[0]%></p>
-      <p>2 = <%=locals.data2[1]%></p>
-      <p>3 = <%=locals.data2[2]%></p>
+      <p><%=locals.data2[0]%></p>
+      <p><%=locals.data2[1]%></p>
+      <p><%=locals.data2[2]%></p>
       <%if(locals.text1){%>
   <script>
     alert(locals.text1)
