--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -14,7 +14,7 @@
 	position:relative;
 	padding:20px 0px 0px 20px;
 	padding-right:30px;
-	width:400px;
+	width:350px;
 	height:450px;
 
 	border:1px solid #66B1F2;
@@ -38,8 +38,9 @@
 	background: rgba(102,177,241,0.8);
  }
 input {
-	width:80%;
-	padding:10px 0px 10px 5px;
+	width:95%;
+	padding:10px 0px 10px 10px;
+	margin-right: 20px;
   border: 1px solid #CFCFCF;
 	border-radius:5px;
 }
