--- a/signlanguage/html/mydir.ejs
+++ b/signlanguage/html/mydir.ejs
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap');
+</style>
     <meta charset="utf-8">
     <title>
       <%= title %>
@@ -15,11 +18,11 @@
   <body>
   <!----타이틀 ----------------------------------------------------------->
    <section class="main-tabs">
-  <h1  onclick="movemain()">수어 학습 사이트</h1>
-  <h3>나만의 단어장으로 원하는 수어들을 학습해보세요!</h3>
-         <!-------------------------검색으로 돌아가기------------------------->
+  <h1  style="text-algin:center;font-family: 'Sunflower', sans-serif;" onclick="movemain()">수어 학습 사이트</h1>
+  <h3 style="text-algin:center;font-family: 'Sunflower', sans-serif;" > 나만의 단어장 </h3>
+  <!-------------------------검색으로 돌아가기------------------------->
      <div class="menu-tabs-container">
-    <button class="menu-tabs" onclick="movepage()">검색으로 돌아가기</button>
+    <button style="text-algin:center;font-family: 'Sunflower', sans-serif;" class="menu-tabs" onclick="movepage()">검색으로 돌아가기</button>
     <script>
       function movepage(){
         location.href = "/searchpage";
@@ -35,7 +38,6 @@
        form.setAttribute("method", "post");
        form.setAttribute("action","/deletedir");
        document.body.appendChild(form);
-
        var insert = document.createElement('input');
        insert.setAttribute("type","hidden");
        insert.setAttribute("name","test3");
@@ -43,11 +45,14 @@
        form.appendChild(insert);
        form.submit();
       }
-
-        function movemain() {
+       function movemain() {
           location.href = "/";
         }
   </script>
+  <!----------맨위로 버튼 ------------------------------------------------------------>
+    <a style="position:fixed;bottom:20px;right:75px;" href="#" title="맨 위로">
+  <img class="arrow" src="arrow.png"></a> 
+  <div id="print">
     <form>
     <% if(locals.data){%>
       <table border=1px solid black>
@@ -59,7 +64,7 @@
         <% for(let i = 0; i<data.length; i++){%>
           <tr>
             <td><%=data[i].title%></td>
-            <td><img src=<%=data[i].img%>></img></td>
+            <td><img width="200" height="200" src=<%=data[i].img%>></img></td>
             <td><input type="button" class="tdclass" id=<%=data[i].slid%> value="삭제" onclick="postid(this.id)"></input></td>
           </tr>
           <%}%>
@@ -70,12 +75,14 @@
       <%}%>
 
     </form>
+    </div>
+    <input class="tdclass" type="button" value="인쇄하기" id="print" onclick="window.print()"/>
 <div class="fixed">
- <p >최근 <br>검색한 단어</p>
+ <p style="text-algin:center;font-family: 'Sunflower', sans-serif;" >최근 <br>검색한 단어</p>
       <%if(locals.data2)%>
-      <p><%=locals.data2[0]%></p>
-      <p><%=locals.data2[1]%></p>
-      <p><%=locals.data2[2]%></p>
+      <p style="text-algin:center;font-family: 'Sunflower', sans-serif;"><%=locals.data2[0]%></p>
+      <p style="text-algin:center;font-family: 'Sunflower', sans-serif;"><%=locals.data2[1]%></p>
+      <p style="text-algin:center;font-family: 'Sunflower', sans-serif;"><%=locals.data2[2]%></p>
       <%if(locals.text1){%>
   <script>
     alert(locals.text1)
