--- a/signlanguage/public/css/mydir.css
+++ b/signlanguage/public/css/mydir.css
@@ -1,7 +1,7 @@
 /*단어장 css*/
 body{
     text-align: center;
-    font-family : 'Nanum Barun Gothic';
+    font-family: 'Sunflower', sans-serif;
 	text-align : center;
     padding : 10px 0;
 }
@@ -80,6 +80,7 @@ button:hover{
 }
 /*표 */
 table{
+    font-family: 'Sunflower', sans-serif;
     margin-left: auto;
     margin-right: auto;
     border:1px solid #575756; 
@@ -114,3 +115,34 @@ table{
     .td_add{
        width:10%;
     }
+
+/*삭제버튼*/
+.tdclass{
+    width:100px;
+    background-color: #eee;
+    border: none;
+    border-radius: 3px;
+    color:#000;
+    padding: 15px 0;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 4px;
+    cursor: pointer;
+    font-family: 'Sunflower', sans-serif;
+}
+.tdclass:hover{
+    color:white;
+    background: rgba(102,177,241,0.8);
+    transition: all 0.5s ease;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: 'Sunflower', sans-serif;
+}
+/*맨위로 버튼*/
+.arrow
+{
+    width:50px;
+    height:50px;
+}
